--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,16 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btn_eliminar"
+        android:id="@+id/btnEliminar"
         android:layout_width="90dp"
         android:layout_height="41dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:text="Eliminar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/btn_salvar"
+        app:layout_constraintStart_toEndOf="@+id/btnGuardar"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <TextView
@@ -72,7 +72,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/txtNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -93,7 +93,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText3"
+                android:id="@+id/txtTelefono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -113,7 +113,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/txtCorreo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -130,60 +130,60 @@
         app:layout_constraintGuide_begin="291dp" />
 
     <Button
-        android:id="@+id/btn_salvar"
+        android:id="@+id/btnGuardar"
         android:layout_width="85dp"
         android:layout_height="40dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="12dp"
         android:text="Salvar"
-        app:layout_constraintStart_toEndOf="@+id/btn_nuevo"
+        app:layout_constraintStart_toEndOf="@+id/btnNuevo"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <Button
-        android:id="@+id/btn_nuevo"
+        android:id="@+id/btnNuevo"
         android:layout_width="85dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:text="Nuevo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnSiguiente"
         android:layout_width="46dp"
         android:layout_height="42dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:background="@mipmap/ic_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btnAnterior"
         android:layout_width="43dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
         android:background="@mipmap/ic_back"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintEnd_toStartOf="@+id/btnSiguiente"
         app:layout_constraintHorizontal_bias="0.991"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
-        android:id="@+id/btn_llamar"
+        android:id="@+id/btnLlamar"
         android:layout_width="228dp"
         android:layout_height="39dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="20dp"
         android:text="Llamar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_salvar" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />
 
     <Button
-        android:id="@+id/btn_lista"
+        android:id="@+id/btnLista"
         android:layout_width="228dp"
         android:layout_height="39dp"
         android:layout_marginStart="104dp"
@@ -195,11 +195,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_buscar"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscar"
+        app:layout_constraintVertical_bias="0.091" />
 
     <Button
-        android:id="@+id/btn_buscar"
+        android:id="@+id/btnBuscar"
         android:layout_width="228dp"
         android:layout_height="39dp"
         android:layout_marginStart="104dp"
@@ -209,13 +209,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_llamar" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLlamar" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="392dp" />
+        app:layout_constraintGuide_begin="365dp" />
 
 </android.support.constraint.ConstraintLayout>
